use create object instead of model object
